--- a/m/MusicList/play.htm
+++ b/m/MusicList/play.htm
@@ -5,11 +5,12 @@
 <title>连播</title>
 <script language="javascript" src="../js/player.js"></script>
 </head>
+<img src="https://tva3.sinaimg.cn/large/458ec1fagy1gqp7xmhi24j20hs0tsacj.jpg" height="60%">
 <script language="javascript">
 //alert("yy_p/p_"+(Math.round(Math.random()*100))+".Html")
 var junjunUrlArr="";
 setCookie("fenglingniao",junjunUrlArr);
-this.location.href="http://fh.skycy.cloudns.asia/m3u8/?url=https://cdn.jsdelivr.net/gh/dukesxs/cdn/xukun/ku/menshijina/yangmi/1/ym.m3u8";
+this.location.href="";
 </script>
 </body>
 </html>
