--- a/m/MusicList/play.htm
+++ b/m/MusicList/play.htm
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>连播</title>
-<script language="javascript" src="../js/player.js"></script>
-</head>
-<img src="https://tva3.sinaimg.cn/large/458ec1fagy1gqp7xmhi24j20hs0tsacj.jpg" height="60%">
-</body>
-</html>
+ <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-
+
+scale=0.5, maximum-scale=2.0, user-scalable=yes" />
+<style type="text/css">
+<!--
+body {
+	background-color: #000000;
+}
+-->
+</style></head>
+<body><img src="https://tva3.sinaimg.cn/large/458ec1fagy1gqp7xmhi24j20hs0tsacj.jpg" width="100%"/><br/>
+</li>
